# video-sampler

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_docs.txt
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  docker.yml  release-drafter.yml  test.yml
cli_help/: index.html
configs/: hash_base.yaml  hash_gpu.yaml  image_base.yaml
docker/: Dockerfile.minimal
notebooks/: clustering.ipynb
reference/video_sampler/buffer/: index.html
reference/video_sampler/config/: index.html
reference/video_sampler/evaluation/: index.html
reference/video_sampler/gating/: index.html
reference/video_sampler/image_summary/: index.html
reference/video_sampler/integrations/llava_chat/: index.html
reference/video_sampler/integrations/yt_dlp_plugin/: index.html
reference/video_sampler/iterators/: index.html
reference/video_sampler/language/keyword_capture/: index.html
reference/video_sampler/logging/: index.html
reference/video_sampler/sampler/: index.html
reference/video_sampler/samplers/base_sampler/: index.html
reference/video_sampler/samplers/gpu_sampler/: index.html
reference/video_sampler/samplers/image_sampler/: index.html
reference/video_sampler/samplers/video_sampler/: index.html
reference/video_sampler/schemas/: index.html
reference/video_sampler/ttl_counter/: index.html
reference/video_sampler/utils/: index.html
reference/video_sampler/visualisation/clustering/: index.html
reference/video_sampler/worker/: index.html
scripts/: cli_help.py  gen_ref_pages.py  readme_copy.py  run_benchmarks.py
search/: search_index.json
tests/: conftest.py  test_audio_extractor.py  test_base.py  test_buffer.py  test_config.py  test_gating.py  test_iterators.py  test_llava_chat.py  test_samplers.py  test_ttl_counter.py  test_utils.py  test_worker.py  test_ytplugin.py
tests/assets/: subs.json
video_sampler/: __init__.py  __main__.py  buffer.py  config.py  gating.py  iterators.py  logging.py  sampler.py  schemas.py  ttl_counter.py  utils.py  worker.py
video_sampler/integrations/: __init__.py  llava_chat.py  yt_dlp_plugin.py
video_sampler/language/: __init__.py  keyword_capture.py
video_sampler/samplers/: __init__.py  base_sampler.py  gpu_sampler.py  image_sampler.py  video_sampler.py
video_sampler/visualisation/: clustering.py
