[project]
name = "video_sampler"
description = "Video Sampler -- sample frames from a video file"
url = "https://github.com/LemurPwned/video-sampler"
version = "0.4.0"
authors = [
    { name = "LemurPwned", email = "lemurpwned@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = [
  "video sampling",
  "frame selection",
  "labelling",
  "labeling",
  "annotation",
]
dependencies = [
  "av >=10.0.0",
  "ImageHash >=4.3.1",
  "Pillow >=10.0.0",
  "rich >= 13.5.3",
  "typer[all] >= 0.9.0"
]

[project.urls]
Source = "https://github.com/LemurPwned/video-sampler"

[project.scripts]
video_sampler = "video_sampler:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "bump2version"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
